--- a/.github/workflows/deploy-to-minikube-github-actions.yaml
+++ b/.github/workflows/deploy-to-minikube-github-actions.yaml
@@ -22,6 +22,10 @@ jobs:
     - name: Deploy to minikube
       run:
         kubectl apply -f k8s-node-app.yaml
+
+    - name: Wait for pod to be ready
+      run: kubectl wait --for=condition=Ready pod -l app=nodejs-app --timeout=30s
+        
     - name: Test service URLs
       run: |
           minikube service list
